unpackaged/main/default/objects/HealthCloudGA__EhrCondition__c/HealthCloudGA__EhrCondition__c.object-meta.xml
<CustomObject>
    <description>Use to record detailed information about conditions, problems or diagnoses recognized by a clinician. There are many uses including: recording a Diagnosis during an Encounter; populating a problem List or a Summary Statement, such as a Discharge Summary.</description>
    <label>EHR Condition</label>
    <nameField>
        <displayFormat>Cond-{0}</displayFormat>
        <label>EHR Condition ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EHR Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>