unpackaged/main/default/objects/HealthCloudGA__EhrCondition__c/fields/Asserted_by_Physician__c.field-meta.xml
<CustomField>
    <fullName>Asserted_by_Physician__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if checked, indicates was asserted by a medical professional.  If unchecked, indicates assertion by Patient.</description>
    <label>Asserted by Physician?</label>
    <type>Checkbox</type>
</CustomField>