unpackaged/main/default/objects/HealthCloudGA__EhrCondition__c/fields/Breast_Cancer_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Breast_Cancer_Sub_Type__c</fullName>
    <label>Breast Cancer Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TNBC (ER-/PR-/HER2-)</fullName>
            </value>
            <value>
                <fullName>TPBC (ER+/PR+/HER2+)</fullName>
            </value>
            <value>
                <fullName>ER+/HER2-</fullName>
            </value>
            <value>
                <fullName>ER-/HER2+</fullName>
            </value>
            <value>
                <fullName>Other (please specify)</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>