unpackaged/main/default/objects/HealthCloudGA__EhrCondition__c/fields/Breast_Cancer_Sub_Type_Other__c.field-meta.xml
<CustomField>
    <fullName>Breast_Cancer_Sub_Type_Other__c</fullName>
    <description>To be filled in when Breast Cancer Sub Type selection is &quot;Other (please specify)&quot;</description>
    <label>Breast Cancer Sub Type Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>