unpackaged/main/default/objects/HealthCloudGA__EhrCondition__c/fields/Breast_Cancer_Type__c.field-meta.xml
<CustomField>
    <fullName>Breast_Cancer_Type__c</fullName>
    <label>Breast Cancer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Breast_Cancer_Type</valueSetName>
    </valueSet>
</CustomField>