unpackaged/main/default/objects/HealthCloudGA__EhrCondition__c/fields/Breast_Cancer_Type_Other__c.field-meta.xml
<CustomField>
    <fullName>Breast_Cancer_Type_Other__c</fullName>
    <description>If Other (please specify) is selected in the Breast Cancer Type, this field should be filled in with that detail</description>
    <label>Breast Cancer Type Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>