unpackaged/main/default/objects/HealthCloudGA__EhrCondition__c/fields/Care_Plan__c.field-meta.xml
<CustomField>
    <fullName>Care_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Care Plan</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>HealthCloudGA__EhrCarePlan__c.HealthCloudGA__Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.HealthCloudGA__Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>HealthCloudGA__EhrCarePlan__c</referenceTo>
    <relationshipLabel>Patient Conditions</relationshipLabel>
    <relationshipName>Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>