unpackaged/main/default/objects/HealthCloudGA__EhrCondition__c/fields/Condition_Category__c.field-meta.xml
<CustomField>
    <fullName>Condition_Category__c</fullName>
    <label>Condition Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Condition_Category</valueSetName>
    </valueSet>
</CustomField>