unpackaged/main/default/objects/HealthCloudGA__EhrCondition__c/fields/Condition_Name__c.field-meta.xml
<CustomField>
    <fullName>Condition_Name__c</fullName>
    <label>Condition Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>