unpackaged/main/default/objects/HealthCloudGA__EhrCondition__c/fields/Date_Abated__c.field-meta.xml
<CustomField>
    <fullName>Date_Abated__c</fullName>
    <description>The estimated or actual date when the condition, problem, or diagnosis was no longer experienced / was resolved.</description>
    <label>Date Abated</label>
    <type>Date</type>
</CustomField>