unpackaged/main/default/objects/HealthCloudGA__EhrCondition__c/fields/EHR_System_Imported__c.field-meta.xml
<CustomField>
    <fullName>EHR_System_Imported__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, indicates this record came from an EHR system.  Also, if checked a Validation Rule will prevent the editing of this field by anyone other than a System Administrator.</description>
    <label>EHR System Imported?</label>
    <type>Checkbox</type>
</CustomField>