unpackaged/main/default/objects/HealthCloudGA__EhrCondition__c/fields/HealthCloudGA__CertaintyCode__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__CertaintyCode__c</fullName>
    <description>Certainty Symbol in syntax defined by the system</description>
    <label>Certainty Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>