unpackaged/main/default/objects/HealthCloudGA__EhrCondition__c/fields/HealthCloudGA__CertaintyLabel__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__CertaintyLabel__c</fullName>
    <label>Certainty Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>