unpackaged/main/default/objects/HealthCloudGA__EhrCondition__c/fields/HealthCloudGA__DateAsserted__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__DateAsserted__c</fullName>
    <inlineHelpText>The estimated or actual date when the condition, problem, or diagnosis was first detected or suspected.</inlineHelpText>
    <label>Date Asserted</label>
    <type>DateTime</type>
</CustomField>