unpackaged/main/default/objects/HealthCloudGA__EhrCondition__c/fields/HealthCloudGA__EvidenceLabel__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__EvidenceLabel__c</fullName>
    <label>Evidence Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>