unpackaged/main/default/objects/HealthCloudGA__EhrCondition__c/fields/HealthCloudGA__EvidenceSystem__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__EvidenceSystem__c</fullName>
    <description>Identity of the terminology system</description>
    <label>Evidence System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>