unpackaged/main/default/objects/HealthCloudGA__EhrCondition__c/fields/HealthCloudGA__LocationCode__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__LocationCode__c</fullName>
    <description>Location Symbol in syntax defined by the system</description>
    <label>Location Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>