unpackaged/main/default/objects/HealthCloudGA__EhrCondition__c/fields/HealthCloudGA__LocationDetail__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__LocationDetail__c</fullName>
    <description>Precise Location details</description>
    <label>Location Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>