unpackaged/main/default/objects/HealthCloudGA__EhrCondition__c/fields/HealthCloudGA__LocationLabel__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__LocationLabel__c</fullName>
    <label>Location Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>