unpackaged/main/default/objects/HealthCloudGA__EhrCondition__c/fields/HealthCloudGA__Onset__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Onset__c</fullName>
    <label>Onset</label>
    <length>255</length>
    <type>Text</type>
</CustomField>