unpackaged/main/default/objects/HealthCloudGA__EhrCondition__c/fields/HealthCloudGA__SeverityCode__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__SeverityCode__c</fullName>
    <description>Severity Symbol in syntax defined by the system</description>
    <label>Severity Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>