unpackaged/main/default/objects/HealthCloudGA__EhrCondition__c/fields/NLM_Condition__c.field-meta.xml
<CustomField>
    <fullName>NLM_Condition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NLM Condition</label>
    <referenceTo>NLM_Condition__c</referenceTo>
    <relationshipLabel>EHR Conditions</relationshipLabel>
    <relationshipName>EHR_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>