unpackaged/main/default/objects/HealthCloudGA__EhrCondition__c/fields/Stage_at_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Stage_at_Diagnosis__c</fullName>
    <label>Stage at Diagnosis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stage-0/In Situ (DCIS)</fullName>
            </value>
            <value>
                <fullName>Stage-I</fullName>
            </value>
            <value>
                <fullName>Stage-II</fullName>
            </value>
            <value>
                <fullName>Stage-III</fullName>
            </value>
            <value>
                <fullName>Stage-IV</fullName>
            </value>
            <value>
                <fullName>Undesignated﻿</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>