unpackaged/main/default/objects/HealthCloudGA__EhrCondition__c/fields/Treatment_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Treatment_End_Date__c</fullName>
    <description>Can be approximate, use first of the month or first month of the year if unsure</description>
    <label>Treatment End Date</label>
    <type>Date</type>
</CustomField>