unpackaged/main/default/objects/HealthCloudGA__EhrCondition__c/fields/Treatment_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Start_Date__c</fullName>
    <description>Can be approximate, use the start of the month, or the first month of the year if unsure.</description>
    <label>Treatment Start Date</label>
    <type>Date</type>
</CustomField>