unpackaged/main/default/objects/HealthCloudGA__EhrCondition__c/recordTypes/Breast_Cancer.recordType-meta.xml
<RecordType>
    <fullName>Breast_Cancer</fullName>
    <active>true</active>
    <description>Holds diagnosis information for Breast Cancer</description>
    <label>Breast Cancer</label>
</RecordType>