unpackaged/main/default/objects/HealthCloudGA__EhrCondition__c/recordTypes/Chronic_Condition.recordType-meta.xml
<RecordType>
    <fullName>Chronic_Condition</fullName>
    <active>true</active>
    <label>Chronic Condition</label>
</RecordType>