unpackaged/main/default/objects/HealthCloudGA__EhrCondition__c/validationRules/Breast_Cancer_Sub_Type_Other.validationRule-meta.xml
<ValidationRule>
    <fullName>Breast_Cancer_Sub_Type_Other</fullName>
    <active>true</active>
    <description>Breast Cancer Sub Type Other field must be entered when the Breast Cancer Sub Type &quot;Other (please specify)&quot; is selected</description>
    <errorConditionFormula>AND(
            ISPICKVAL( Breast_Cancer_Sub_Type__c , &quot;Other (please specify)&quot;),
            ISBLANK( Breast_Cancer_Sub_Type_Other__c )
            )&amp;&amp; (!$Setup.Bypass__c.Validation__c ||(LOWER($Setup.Bypass__c.SObject__c) &lt;&gt; &quot;all&quot; &amp;&amp; LOWER($Setup.Bypass__c.SObject__c) &lt;&gt; &quot;healthcloudga__ehrcondition__c&quot;))</errorConditionFormula>
    <errorMessage>You indicated a Breast Cancer Sub type of &quot;Other&quot; - please specify the sub type of breast cancer</errorMessage>
</ValidationRule>