unpackaged/main/default/objects/HealthCloudGA__EhrCondition__c/validationRules/Treatment_start_date_before_end_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Treatment_start_date_before_end_date</fullName>
    <active>true</active>
    <description>The treatment start date must be before the treatment end date</description>
    <errorConditionFormula>AND(
            Treatment_Start_Date__c  &gt;  Treatment_End_Date__c,
            !$Setup.Bypass__c.Validation__c,
            LOWER($Setup.Bypass__c.SObject__c) &lt;&gt; &quot;all&quot;,
            LOWER($Setup.Bypass__c.SObject__c) &lt;&gt; &quot;healthcloudga__ehrcondition__c&quot;
        )</errorConditionFormula>
    <errorMessage>Treatment start date cannot be greater than treatment end date</errorMessage>
</ValidationRule>